spectec/test/elab/neg/type-fuse-outside-hint.spectec
;; Token-concatenation `#` appears in regular expression position
;; rather than inside a hint expression.

dec $f : nat
def $f = 0 # 1
